<resources>
    <string name="app_name">Memetory</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="splash_title">나만의 밈 영상\n제작 서비스</string>
    <string name="tutorial_first_title">원하는 템플릿을 선택하고</string>
    <string name="tutorial_second_title">얼굴, 목소리, 대사를 입력하면?</string>
    <string name="tutorial_third_title">나만의 밈 완성!</string>
    <string name="nickname_title">자신만의 닉네임을\n입력해주세요!</string>
    <string name="auth_google">Google 계정으로 로그인</string>
    <string name="auth_kakao">카카오 로그인</string>
    <string name="sign_up_title">자신만의 닉네임을\n입력해주세요!</string>
    <string name="sign_up_hint">한글, 영어, 숫자로 구성할 수 있어요</string>
    <string name="sign_up_nickname">닉네임</string>
    <string name="button_confirm">확인</string>
    <string name="scene_choose_face">얼굴 선택하기</string>
    <string name="scene_enter_lines">대사 입력하기</string>
    <string name="scene_choose_voice">목소리 선택하기</string>

</resources>