<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.ui.auth.SignUpFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/signUpTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.App.h1"
        android:text="@string/sign_up_title"
        android:gravity="center"
        android:layout_marginBottom="80dp"
        app:layout_constraintBottom_toTopOf="@id/nicknameText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/nicknameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.App.h4"
        android:text="@string/sign_up_nickname"
        android:layout_marginStart="2dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/nicknameEditText"
        app:layout_constraintEnd_toStartOf="@id/signUpTitle"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/nicknameEditText"
        android:layout_width="308dp"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.App.body1"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/nicknameText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/hintText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.App.body2"
        android:textColor="@android:color/darker_gray"
        android:text="@string/sign_up_hint"
        app:layout_constraintStart_toStartOf="@id/nicknameText"
        app:layout_constraintTop_toBottomOf="@id/nicknameEditText"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/confirmBtn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/corner_radius_10"
        android:backgroundTint="@color/mainBtn"
        android:textAppearance="@style/TextAppearance.App.button"
        android:textColor="@color/white"
        android:text="@string/button_confirm"
        app:layout_constraintTop_toBottomOf="@id/nicknameEditText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>