<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="20dp"
        tools:context=".presentation.ui.generatememe.SceneDetailFragment">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/settingText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.App.h3"
            android:text="설정하기"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/exampleImg"
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:src="@drawable/main_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settingText"
            app:layout_constraintBottom_toTopOf="@id/chooseFaceBtn" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/chooseFaceBtn"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@drawable/corner_radius_10"
            android:backgroundTint="@color/subBtn"
            android:textAppearance="@style/TextAppearance.App.body2"
            android:textColor="@color/black"
            android:text="@string/scene_choose_face"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/exampleImg"
            app:layout_constraintBottom_toTopOf="@id/enterLinesBtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/enterLinesBtn"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@drawable/corner_radius_10"
            android:backgroundTint="@color/subBtn"
            android:textAppearance="@style/TextAppearance.App.body2"
            android:textColor="@color/black"
            android:text="@string/scene_enter_lines"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/chooseFaceBtn"
            app:layout_constraintBottom_toTopOf="@id/chooseVoiceBtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/chooseVoiceBtn"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@drawable/corner_radius_10"
            android:backgroundTint="@color/subBtn"
            android:textAppearance="@style/TextAppearance.App.body2"
            android:textColor="@color/black"
            android:text="@string/scene_choose_voice"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/enterLinesBtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/confirmBtn"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@drawable/corner_radius_10"
            android:backgroundTint="@color/mainBtn"
            android:textAppearance="@style/TextAppearance.App.button"
            android:textColor="@color/white"
            android:text="@string/button_confirm"
            app:layout_constraintTop_toBottomOf="@id/chooseVoiceBtn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>